--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,10 +45,14 @@
     <string name="open_setting_wifi">Tap icon to open wifi setting</string>
     <string name="disconnected">Disconnected</string>
     <string name="fragment_user">Account</string>
+    <string name="notification">Notification</string>
     <string name="login_please">Log in to your Yummy account</string>
     <string name="intro_account">Sync your list, likes and history</string>
     <string name="history_user">History</string>
     <string name="address_user">Address</string>
     <string name="setting_user">Settings</string>
     <string name="sign_out">Sign out</string>
+    <string name="ongoing">Ongoing</string>
+    <string name="no_order">No Order</string>
+    <string name="contect_order">Find menu and place for order.\nWe \'re ready to serve you </string>
 </resources>
