Load quan an firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,10 @@
     <string name="setting_user">Settings</string>
     <string name="sign_out">Sign out</string>
     <string name="phone_login">Phone Login</string>
+    <string name="send_code">Send Code</string>
+    <string name="resend_code">Resend Code</string>
+    <string name="code">Code</string>
+    <string name="verifyCode">VerifyCode</string>
     <string name="ongoing">Ongoing</string>
     <string name="no_order">No Order</string>
     <string name="contect_order">Find menu and place for order.\nWe \'re ready to serve you </string>
