--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Yummy</string>
+    <string name="Your_API_KEY">AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4</string>
     <string name="welcome">Welcome to Yummy</string>
     <string name="loading">Loading...</string>
     <string name="home">Home</string>
@@ -60,4 +61,6 @@
     <string name="ongoing">Ongoing</string>
     <string name="no_order">No Order</string>
     <string name="contect_order">Find menu and place for order.\nWe \'re ready to serve you </string>
+    <string name="comment">Comments</string>
+    <string name="menu">Menu</string>
 </resources>
