--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
         <item>Loading</item>
         <item>Loading</item>
     </string-array>
+    <string name="freeship">Freeship</string>
 </resources>
