--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="change_lang">Change Language</string>
     <string name="login_first">You need to login to app. Please Login!</string>
     <string name="male">Male</string>
-    <string name="felmale">Felmale</string>
+    <string name="female">Female</string>
     <string name="none">None</string>
     <string name="info_account">Welcome you to join Yummy apps</string>
     <string name="error_change_address">Can\' t change address. Please check the entered address again!</string>
