--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Yummy</string>
-    <string name="Your_API_KEY">AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4</string>
+    <string name="Your_API_KEY" translatable="false">AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4</string>
     <string name="welcome">Welcome to Yummy</string>
     <string name="loading">Loading...</string>
     <string name="home">Home</string>
@@ -10,13 +10,13 @@
     <string name="cred_verify_input_user_label">Your email address</string>
     <string name="cred_verify_input_pass_label">Yout password</string>
     <string name="register_text">Sign in</string>
-    <string name="sso_facebook_ad">Facebook</string>
-    <string name="sso_google_ad">Google</string>
+    <string name="sso_facebook_ad" translatable="false">Facebook</string>
+    <string name="sso_google_ad" translatable="false">Google</string>
     <string name="sso_phone">Phone</string>
     <string name="sign_other">or sign in with</string>
     <string name="policy_message">By using this software, you agree to our \n<u><b>Terms of Use</b></u> and <u><b>Privacy Policy</b></u>.</string>
     <string name="policy_main">By using  this software, you agree to these \n Term Of Use &amp; Privacy Policy</string>
-    <string name="version_register">Version 3.2.135</string>
+    <string name="version_register" translatable="false">Version 3.2.135</string>
     <string name="rta_policy">Privacy Policy</string>
     <string name="rta_termsofuse">Terms of Use</string>
     <string name="popular">Popular</string>
@@ -56,7 +56,7 @@
     <string name="phone_login">Phone Login</string>
     <string name="send_code">Send Code</string>
     <string name="resend_code">Resend Code</string>
-    <string name="code">Code</string>
+    <string name="code" translatable="false">Code</string>
     <string name="verifyCode">VerifyCode</string>
     <string name="ongoing">Ongoing</string>
     <string name="no_order">No Order</string>
@@ -97,6 +97,10 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="none">None</string>
-    <string name="info_account">Welcome you to join Yummy apps</string>
+    <string name="info_account">Welcome you to join Yummy app</string>
     <string name="error_change_address">Can\' t change address. Please check the entered address again!</string>
+    <string name="app_language">App Language</string>
+    <string name="vietname">Vietnamese</string>
+    <string name="english">English</string>
+    <string name="cancel">Cancel</string>
 </resources>
