--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,10 @@
     <string name="change_pass_fail">Something went wrong. Please try again later</string>
     <string name="reset_pass_succ">Reset password instructions has sent to your email</string>
     <string name="reset_pass_fail">Email don\'t exist</string>
+    <string name="old_pass">Old password</string>
+    <string name="confirm">Confirm</string>
+    <string name="enter_current_pass">Enter Current Password</string>
+    <string name="enter_new_pass">Enter New Password</string>
+    <string name="re_enter_pass">Re-Enter Password</string>
+    <string name="error_change_pass">Wrong password.</string>
 </resources>
