--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="complete">Complete</string>
     <string name="delete_question">Do you want to delete?</string>
     <string name="delete">Delete</string>
+    <string name="error">Error!</string>
 </resources>
