--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,4 +159,6 @@
     <string name="content">Please review more than 100 words, do not spam… to get reward points!</string>
     <string name="rating">Required Rating</string>
     <string name="success">Success!!</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
