--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Yummy</string>
     <string name="Your_API_KEY" translatable="false">AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4</string>
     <string name="welcome">Welcome to Yummy</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="home">Home</string>
     <string name="history">History</string>
     <string name="notifications">Notifications</string>
@@ -140,7 +140,7 @@
     <string name="ship_fee">Ship fee: </string>
     <string name="order_success">You have successfully ordered! Please wait for confirmation!</string>
     <string name="discount_code">Discount code</string>
-    <string name="okay">Ok</string>
+    <string name="okay">OK</string>
     <string name="warning">Warning</string>
     <string name="mess_warning">If you do not allow the app to access your current location, the app will be closed!\nDo you want to re-authorize?</string>
     <string name="on_sent">Your order is waiting for confirmation</string>
@@ -172,4 +172,13 @@
     <string name="login_again">Please log in again!</string>
     <string name="reset_suc">Send email successfully!</string>
     <string name="reset_fail">Invalid email!</string>
+    <string name="cmnd">Identity Card</string>
+    <string name="bank">Bank</string>
+    <string name="stk">Account Number</string>
+    <string name="owner">Owner</string>
+    <string name="bank_account">Bank account</string>
+    <string name="add_menu">Add menu</string>
+    <string name="add">Add</string>
+    <string name="type_menu">Enter Type\'s menu</string>
+    <string name="img_first">Please enter the information first!</string>
 </resources>
