--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,4 +187,5 @@
     <string name="min_order">Min order</string>
     <string name="add_branch">Add Branch</string>
     <string name="address_branch">Enter Address\'s Branch</string>
+    <string name="twice_exit">Please click BACK again to exit!</string>
 </resources>
