--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -184,4 +184,5 @@
     <string name="add_branch">Thêm chi nhánh</string>
     <string name="address_branch">Nhập địa chỉ</string>
     <string name="twice_exit">Nhấp thêm lần nữa để thoát!</string>
+    <string name="date">Ngày đặt</string>
 </resources>
