--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -187,4 +187,5 @@
     <string name="date">Ngày đặt</string>
     <string name="mess_change_status">Bạn có chắc chắn chuyển đến giai đoạn tiếp theo của đơn hàng?</string>
     <string name="sure">Chắc chắn</string>
+    <string name="manage">Quản lý</string>
 </resources>
