--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
     <string name="date">Date</string>
     <string name="mess_change_status">Are you sure of the next process?</string>
     <string name="sure">Sure</string>
+    <string name="manage">Management</string>
 </resources>
