set order partner

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -189,4 +189,5 @@
     <string name="sure">Chắc chắn</string>
     <string name="manage">Quản lý</string>
     <string name="exit">Thoát</string>
+    <string name="hot">Hot</string>
 </resources>
