--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,4 +193,5 @@
     <string name="sure">Sure</string>
     <string name="manage">Management</string>
     <string name="exit">Exit</string>
+    <string name="hot">Hot</string>
 </resources>
