--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,7 @@
     <string name="order">Order</string>
     <string name="branch">Branch</string>
     <string name="mess_delete">Do you want to delete?</string>
+    <string name="mess_open">Do you want to open?</string>
     <string name="edit_menu">Edit Menu</string>
     <string name="menu_name">Enter Food\'s name</string>
     <string name="menu_price">Enter Price\'s name</string>
@@ -203,4 +204,6 @@
     <string name="customer">Customer</string>
     <string name="partner">Partner</string>
     <string name="choose_role">Please, choose role!</string>
+    <string name="close_branch">Do you want to close this branch?</string>
+    <string name="open_branch">Do you want to open this branch?</string>
 </resources>
