manage detail admin

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -211,4 +211,7 @@
     <string name="enter_video">Nhập đường dẫn video (đường dẫn từ youtube)</string>
     <string name="create">Tạo</string>
     <string name="not_back">Bạn phải hoàn thành thông tin này!!</string>
+    <string name="account_admin">Tài khoản quản trị viên</string>
+    <string name="account_custom">Tài khoản khách hàng</string>
+    <string name="account_partner">Tài khoản đối tác</string>
 </resources>
