--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -215,4 +215,5 @@
     <string name="account_custom">Tài khoản khách hàng</string>
     <string name="account_partner">Tài khoản đối tác</string>
     <string name="mess_close">Bạn có muốn khóa?</string>
+    <string name="account_lock">Tài khoản của bạn đã bị khóa.</string>
 </resources>
